--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
+    
 {
   "scripts": {
     "lint-scss": "sass-lint _sass/**/*.scss --verbose --no-exit",
-    "build": "yarn run build-css && yarn run build-jekyll",
+    "build": "yarn run build-css && yarn run build-js && yarn run build-jekyll",
     "build-jekyll": "bundle exec jekyll build",
     "build-css": "node-sass --include-path node_modules _sass --source-map true --output-style compressed --output css && postcss --use autoprefixer --replace css/**/*.css --no-map",
     "build-js": "mkdir -p js/build/global-nav && cp node_modules/@canonical/global-nav/dist/global-nav.js js/build/global-nav",
@@ -11,12 +12,13 @@
     "clean": "rm -rf node_modules yarn-error.log css js *.log *.sqlite _site/ build/ .jekyll-metadata .bundle"
   },
   "dependencies": {
-    "@canonical/global-nav": "^2.1.0",
+    "@canonical/global-nav": "2.1.0",
     "autoprefixer": "9.6.0",
+    "global-nav": "2.0.2",
     "node-sass": "4.12.0",
     "postcss-cli": "6.1.2",
     "sass-lint": "1.13.1",
-    "vanilla-framework": "2.1.0",
+    "vanilla-framework": "2.0.1",
     "watch-cli": "0.2.3"
   }
 }
