--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -1,9 +1,9 @@
-name: Test docker image
+name: PR checks
 on: pull_request
 env:
   DOCKER_BUILDKIT: 1
 jobs:
-  docker-build:
+  run-image:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -13,3 +13,15 @@ jobs:
       run: |
         docker run -d -p 80:80 etclite-io
         sleep 1 && curl --head --fail --retry-delay 5 --retry 10  --retry-connrefused http://localhost
+  lint-python:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v1
+
+    - name: Install dependencies
+      run: yarn install
+
+    - name: Lint scss
+      run: yarn run lint-scss
+
