Add github actions PR workflow

--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "scripts": {
+    "start": "yarn run build && yarn run serve",
+    "lint-nginx": "gixy nginx.conf",
     "lint-scss": "stylelint _sass/**/*.scss",
     "build": "yarn run build-css && yarn run build-js && yarn run build-jekyll",
     "build-jekyll": "bundle exec jekyll build",
