--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -13,7 +13,24 @@ jobs:
       run: |
         docker run -d -p 80:80 etclite-io
         sleep 1 && curl --head --fail --retry-delay 5 --retry 10  --retry-connrefused http://localhost
-  lint-python:
+
+  lint-nginx:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - uses: actions/setup-python@v2
+        with:
+          python-version: '3.7'
+
+      - name: Install gixy
+        run: pip3 install gixy
+
+      - name: Lint nginx configuration files
+        run: yarn lint-nginx
+
+  lint-scss:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,4 +41,3 @@ jobs:
 
     - name: Lint scss
       run: yarn run lint-scss
-
